# ssi-hv-starter

./: .gitignore  ARCHITECTURE.md  CLUSTER_STATUS.md  COMMAND_REFERENCE.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  ONBOARDING.md  PHASE8_SUCCESS.md  PHASE9_RESULTS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SESSION_COMPLETE.md  STATUS.md  TDD_SUMMARY.md  TESTING.md  TEST_COVERAGE.md  cluster-config.yaml  dev.sh  test-summary.txt
.github/workflows/: tests.yml
acpi-gen/: Cargo.toml
acpi-gen/src/: main.rs
coordinator/: example_endpoint_exchange.py  main.py  pyproject.toml  test_coordinator.py
deploy/: DEPLOYMENT_SUCCESS.md  README.md  cleanup.sh  install_system_deps.sh  phase9_cluster_validation.sh  phase9_test.sh  preflight.sh  remote_test.sh  setup_cluster.sh  setup_node.sh  start_vmms.sh  status_cluster.sh  stop_vmms.sh  test_distributed_paging.sh  test_two_node.sh
docs/: 01_problem_statement.md  02_system_requirements.md  03_m2_rdma_implementation_plan.md  04_m2_progress_report.md  05_m2_phase4_status.md  06_m2_phase4_complete.md  07_consumer_hardware_feasibility.md  08_consumer_hardware_complete.md  09_phase5_endpoint_exchange.md  10_phase6_pager_integration.md
examples/: phase6_integration.py
pager/: Cargo.toml
pager/examples/: pager_node.rs  phase9_workload_test.rs  test_distributed_paging.rs
pager/src/: lib.rs
rdma-transport/: Cargo.toml  FIXES.md  build.rs
rdma-transport/src/: lib.rs  lib_old.rs  lib_rdma_only.rs
rdma-transport/src/rdma/: connection.rs  connection.rs.bak  device.rs  final_fix.sh  fix_enums.sh  fix_masks.sh  mod.rs
rdma-transport/src/transport/: mod.rs  tcp.rs
tests/integration/: test_cluster.sh
vmm/: Cargo.toml
vmm/src/: main.rs  vcpu.rs
