[package]
name = "pager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
userfaultfd = "0.9"
log = "0.4"
libc = "0.2"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rdma-transport = { path = "../rdma-transport" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ctrlc = "3.4"

[[example]]
name = "pager_node"
path = "examples/pager_node.rs"
