[package]
name = "rdma-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
thiserror = "1"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "poll"] }
rand = "0.8"

[build-dependencies]
bindgen = "0.70"

[features]
default = []
stub-rdma = [] # Disable RDMA, use stub implementation for testing
