[package]
name = "rdma-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
thiserror = "1"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "poll"] }
rand = "0.8"

# TCP transport (default, consumer-grade hardware)
tokio = { version = "1", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }
bincode = "1" # Fast binary serialization

# mDNS for zero-config peer discovery
mdns-sd = "0.11"
local-ip-address = "0.6.5"

[build-dependencies]
bindgen = "0.70"

[features]
default = ["tcp-transport"]
tcp-transport = []          # TCP/IP transport (works on any network)
rdma-transport = []         # RDMA transport (requires InfiniBand/RoCE NICs)
stub-rdma = []              # Disable all transports for testing
